fix: avatar image overflow the container

--- a/src/components/avatar/Avatar.module.scss
+++ b/src/components/avatar/Avatar.module.scss
@@ -4,8 +4,7 @@
 }
 
 .image {
-  width: 90%;
-  height: 90%;
+  max-width: 100%;
   border-radius: 100%;
 }
 
